force-app/main/default/objects/ShiftItem__c/ShiftItem__c.object-meta.xml
<CustomObject>
    <label>Shift Item</label>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Shift item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>