force-app/main/default/objects/ShiftItem__c/fields/AdherenceType__c.field-meta.xml
<CustomField>
    <fullName>AdherenceType__c</fullName>
    <description>If this type is of type&quot;shift&quot; it is an item we want to check against the &quot;adherence&quot; items.</description>
    <label>Adherence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shift</fullName>
                <default>true</default>
                <label>Shift</label>
            </value>
            <value>
                <fullName>Adherence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>