force-app/main/default/objects/ShiftItem__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>The end of a shift item</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>