force-app/main/default/objects/ShiftItem__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <description>Belonging to a specific shift</description>
    <label>Shift</label>
    <referenceTo>Shift__c</referenceTo>
    <relationshipName>ShiftItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>