force-app/main/default/objects/ShiftItem__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Start of a shift item</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>