force-app/main/default/objects/ShiftItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of a shift item. This can be used as for forecasting as well as checking it against the real time current adherence</description>
    <label>Status</label>
    <required>true</required>
    <length>255</length>
    <type>Text</type>
</CustomField>